#05 || Update index.css || Prevented scrollbars to appear and positioned buttons better

--- a/index.css
+++ b/index.css
@@ -1,3 +1,8 @@
+html, body {
+    overflow: hidden;
+}
+
+
 body{
     background-color: white;
     background-size: cover;
@@ -38,7 +43,7 @@ body{
 h1 {
     position: absolute;
     font-size: 120px;
-    color: ;
+    color: #2c85d8;
     left: 30px;
     top: 15%;
     transform: translateY(-50%);
@@ -75,7 +80,7 @@ h1 {
     position: absolute; 
     color: white;
     left: 40px; 
-    top: 86%; 
+    top: 83%; 
     font-size: 40px;
     font-weight: bold;
     border-radius: 40px;
@@ -99,9 +104,9 @@ h1 {
 .image-copyright{
     position: absolute;
     color: rgb(192, 192, 192);
-    font-size: 22px;
+    font-size: 21px;
     left: 30px;
-    bottom: -150px;
+    bottom: 10px;
     
 }
 
@@ -110,7 +115,7 @@ h1 {
     color: rgb(0, 0, 0,0.8);
     font-size: 25px;
     left: 30px;
-    bottom: -60px;
+    bottom: 30px;
     
 }
 
@@ -158,7 +163,4 @@ h1 {
         left: 10px;
         bottom: -03px;
     }
-    
-    
-
 }
